# aasdk

./: CMakeLists.txt  Readme.md  tu.cpp  vcpkg.json
aasdk_proto/: CMakeLists.txt
include/f1x/aasdk/IO/: Promise.hpp
src/Transport/: SSLWrapper.cpp
